--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,17 @@
+@font-face {
+  font-family: 'Quicksand';
+  src: url('../public/fonts/Quicksand-VariableFont_wght.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Forum';
+  src: url('../public/fonts/Forum-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -20,7 +34,7 @@ body,
 .content {
   height: 100%;
   width: 100%;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: 'Quicksand', "Source Sans Pro", sans-serif;
 }
 
 .app {
